# pixiv-sql

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml
src/pixiv_sql/: __init__.py  __main__.py
src/pixiv_sql/bookmarks/: __init__.py  illusts.py
src/pixiv_sql/lib/: __init__.py  bookmark.py  illusts.py  images.py  logger.py  pixiv.py  pixivpy.py  sql.py  tags.py  type.py  user.py
src/pixiv_sql/model/: __init__.py  base.py  bookmarked_illust.py  illust_series.py  illust_statistics.py  illust_tag.py  image.py  series.py  tag.py  type.py  user.py
src/pixivpy/: auth.py  bookmark.py  illusts.py
src/sql/create/: bookmarked_illusts.sql  bookmarks.sql  bookmarks_tags.sql  illusts_tags.sql  images.sql  tags.sql  types.sql  users.sql
src/sqlite/: bookmarks.py  bookmarks_tags.py  illusts.py  illusts_tags.py  images.py  insert.py  tags.py  types.py  users.py
src/sqlite/utils/: __init__.py  database.py  insert.py  sql.py
tests/: test_init.py
