[project]
name = "pixiv-sql"
version = "0.5.4"
description = "Python library to backup pixiv user data to SQLite DB."
authors = [
    { name = "ryohidaka", email = "39184410+ryohidaka@users.noreply.github.com" }
]
dependencies = [
    "pixivpy3>=3.7.5",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.31",
    "tqdm>=4.66.4",
]
readme = "README.md"
requires-python = ">= 3.8"
license = {file = "LICENSE"}
keywords = ["pixiv"]

[project.urls]
Homepage = "https://github.com/ryohidaka/pixiv-sql"
Repository = "https://github.com/ryohidaka/pixiv-sql"
Issues = "https://github.com/ryohidaka/pixiv-sql/issues"
Changelog = "https://github.com/ryohidaka/blob/main/pixiv-sql/CHANGELOG.md"

[project.scripts]
"pixiv-sql" = "pixiv_sql:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.4",
    "pytest>=8.2.0",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pixiv_sql"]
